// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. closeicon renders with different colours 1`] = `
Array [
  <title />,
  <path
    fill="white"
    stroke="white"
  />,
]
`;

exports[`2. iconactivityindicator renders with different colours 1`] = `
<activity-indicator__ActivityIndicatorContainer>
  <div>
    <activity-indicator__ActivityIndicatorSpinner>
      <div />
    </activity-indicator__ActivityIndicatorSpinner>
  </div>
</activity-indicator__ActivityIndicatorContainer>
`;

exports[`3. iconcopylink renders with different colours 1`] = `
Array [
  <title>
    Copy link to clipboard
  </title>,
  <path
    fill="#facade"
    stroke="#c0ffee"
  />,
]
`;

exports[`4. iconemail renders with different colours 1`] = `
Array [
  <title>
    Email Icon
  </title>,
  <g
    fill="#facade"
    stroke="#c0ffee"
  >
    <path />
  </g>,
]
`;

exports[`5. iconfacebook renders with different colours 1`] = `
Array [
  <title>
    Facebook Icon
  </title>,
  <g
    fill="#facade"
    stroke="#c0ffee"
  >
    <path />
  </g>,
]
`;

exports[`6. iconforwardarrow renders with different colours 1`] = `
<g
  fill="#facade"
>
  <path />
</g>
`;

exports[`7. iconforwardchevron renders with different colours 1`] = `
<g
  fill="#facade"
>
  <path />
</g>
`;

exports[`8. iconsavebookmark renders with different colours 1`] = `
Array [
  <title>
    Save to My Articles
  </title>,
  <path
    fill="#facade"
    stroke="#c0ffee"
  />,
]
`;

exports[`9. iconstar renders with different colours 1`] = `
Array [
  <title>
    Save star
  </title>,
  <path
    fill="#facade"
    stroke="#c0ffee"
  />,
]
`;

exports[`10. icontwitter renders with different colours 1`] = `
Array [
  <title>
    Twitter Icon
  </title>,
  <g>
    <path
      fill="#facade"
      stroke="#c0ffee"
    />
  </g>,
  <defs>
    <clipPath>
      <rect
        fill="white"
      />
    </clipPath>
  </defs>,
]
`;

exports[`11. iconvideo renders with different colours 1`] = `
Array [
  <title>
    Video Icon
  </title>,
  <rect
    fill="#facade"
    stroke="#c0ffee"
  />,
  <polygon
    fill="#facade"
    stroke="#c0ffee"
  />,
]
`;

exports[`12. iconvideo360player renders with different colours 1`] = `
Array [
  <title>
    Video 360 Player Icon
  </title>,
  <path
    fill="#facade"
    stroke="#c0ffee"
  />,
]
`;

exports[`13. thestlogo renders with different colours 1`] = `
Array [
  <title>
    ST
  </title>,
  <path
    fill="#facade"
    stroke="#c0ffee"
  />,
]
`;

exports[`14. thetimeslogo renders with different colours 1`] = `
Array [
  <title>
    The Times
  </title>,
  <path
    fill="#facade"
    stroke="#c0ffee"
  />,
]
`;
